--- a/includes/templates/template_locker/css/stylesheet_css_buttons.css
+++ b/includes/templates/template_locker/css/stylesheet_css_buttons.css
@@ -16,6 +16,7 @@ width : 20em;
 background-color: #000;
 height:20px;
 color : #fff;
+background:#000;
 border: none;
 margin:0px 5px;
 font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
@@ -43,7 +44,7 @@ text-decoration: none;
 .button_sold_out_sm, .button_sold_out, .button_update_cart, .button_checkout, .button_login {width: 10em;}
 .button_return_to_product_list, .button_add_selected {width: 22em;}
 .button_in_cart{width: 19em;}  
-.button_submit {width: 18em;}
+.button_submit {width: 18em; background:#000;font-weight:bold; height:26px;}
 .button_update_cart {color: red;}
 .button_update_cartHover {color: black;}
 /*.innerbox#headernavcenter .boxtext .button_search {display:inline;}*/
