--- a/includes/templates/template_locker/css/stylesheet_main.css
+++ b/includes/templates/template_locker/css/stylesheet_main.css
@@ -317,7 +317,7 @@ h2.centerBoxHeading {color:#3e3e3e;
 	font-weight:normal;}
 #productDescription {margin:0px; padding:15px 0 0; width:100%; overflow:hidden;}
 
-#cartAdd { margin:0; padding:0; overflow:hidden;}
+#cartAdd { margin:5px 0px 0px 0px; padding:0; overflow:hidden;}
 #cartAdd .qty{ padding:3px; border:solid 1px #E1E1E1; width:50px;}
 #cartAdd .text2{ margin-top:2px;}
 #alsoPurchased {margin:20px 0;}
