--- a/includes/templates/template_locker/css/stylesheet_main.css
+++ b/includes/templates/template_locker/css/stylesheet_main.css
@@ -119,7 +119,7 @@ legend{ border:solid 1px #eceaea; padding:10px 20px; color:#000; background:#fef
 	display:none;
 }
 .catDescContent{
-	color:#fff;
+	/*color:#fff;*/
 }
 /*  ----------------------- HEADINGS -----------------------  */
 
