--- a/includes/templates/template_locker/css/stylessheet_fade.css
+++ b/includes/templates/template_locker/css/stylessheet_fade.css
@@ -8,31 +8,15 @@ URL : www.hv-designs.co.uk
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 */
 
-*{
-	padding:0;
-	margin:0;
-}
-
-body {
-	font-family:Arial, Helvetica, sans-serif;
-	padding:0;
-	margin:0;
-	background-color:#272727;
-	font-size: 12px;
-	color: #7e7e7e;
-	background-image: url(http://www.hv-designs.co.uk/tutorials/jquery/images/background.png);
-	background-repeat: repeat-x;
-}
-
 .latest_img {
 	border: 1px solid #575757;
 	/*margin-left: 12px;*/
 }
 
-.img {
+/*.img {
 	border: 1px solid #575757;
 	margin-left: 12px;
-}
+}*/
 
 .title_color1 {color: #ffffff}
 .title_color2 {color: #0390c5}
