--- a/includes/templates/template_locker/css/stylesheet_main.css
+++ b/includes/templates/template_locker/css/stylesheet_main.css
@@ -53,7 +53,7 @@ textarea#enquiry {width:70%; margin:1px 0;}
 .tie-margin1{ margin-bottom:10px;}
 .tie .tie-indent{ padding:11px;}
 
-.tie2{ background:#494844; }
+.tie2{ background:#494844; margin-bottom:10px; }
 .tie2 .tie2-indent{ padding:15px 20px;}
 .tie2 label{ font-weight:bold; color:#fff;}
 
