--- a/includes/templates/template_locker/css/stylesheet_ezpages_footer_columns.css
+++ b/includes/templates/template_locker/css/stylesheet_ezpages_footer_columns.css
@@ -7,11 +7,9 @@
  
 #navSuppWrapper {
 	background:#fff;
-	border-top:1px solid #dcdbda;
 	padding-bottom:20px;
 	width:680px;
-	float:right;
-	margin-right:47px;
+	margin:0px auto;
 }
 .bottom_img{ margin-top:15px;}
 #navSupp{
