--- a/copy_all_url2/css/style.css
+++ b/copy_all_url2/css/style.css
@@ -3,5 +3,4 @@ body{background: white;	color:#333;	font-size:12px;	line-height:16px;}
 h3{ margin: 5px 0 5px 0;}
 #info{ padding:5px 10px; width: 600px; background:#f3f3f3;margin-bottom: 10px;border: 1px solid #eee;}
 .format{ padding:10px;}
-
-.addoption{}
+#options input{ margin-right:35px; vertical-align:top; line-height:18px;}
